# chmseek

./: .gitignore  AGENT_CHMSEEK_USAGE.md  ARCHITECTURE.md  CHANGELOG.md  CHMSEEK_DESIGN_DECISIONS.md  CODEX_PROMPT_CHMSEEK.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
src/chmseek/: __init__.py  audit.py  chunker.py  cli.py  constants.py  diagnostics.py  embeddings.py  errors.py  extractors.py  indexer.py  manifest.py  parser.py  reader.py  search.py  storage.py  toc.py  utils.py
tests/: conftest.py  test_cli.py  test_embeddings.py  test_index_search.py  test_read_toc_security.py
tests/fixtures/: fake.chm
tests/fixtures/extracted_help/: ignored.js  index.html  toc.hhc
tests/fixtures/extracted_help/api/: errors.html  session.html
tests/fixtures/extracted_help/getting_started/: concepts.html
tests/fixtures/extracted_help/reference/: tables.html
tests/fixtures/extracted_help/tutorials/: workflow.html
